exports[`test renders correctly App 1`] = `
<div
  className="app-0-0">
  <header
    className="header-0-1">
    <h1
      className="h1-0-6">
      Just H1
    </h1>
    <h1
      className="h1-0-6 h1_text-0-7 text-0-5">
      Force test
    </h1>
  </header>
  <section
    className="section-0-3 section_content-0-4"
    data-name="content">
    <p
      className="p-0-8 text-0-5 h1-0-6">
      compose multiple classes test
    </p>
    <button
      className="button-0-9">
      primitive test
    </button>
    <button
      className="button-0-10 button-0-9">
      dynamic primitive test
    </button>
  </section>
</div>
`;

exports[`test renders correctly AppStyled 1`] = `
<div
  className="app-0-11">
  <header
    className="header-0-12">
    <h1
      className="h1-0-16">
      Just H1
    </h1>
    <h1
      className="h1-0-16 text-0-18">
      Force test
    </h1>
  </header>
  <section
    className="section-0-13 content-0-15"
    data-name="content">
    <p
      className="p-0-17 text-0-18 h1-0-16">
      compose multiple classes test
    </p>
    <button
      className="button-0-19">
      primitive test
    </button>
    <button
      className="button-0-20 button-0-19">
      dynamic primitive test
    </button>
  </section>
</div>
`;
